# projectx-2021

./: .gitignore  README.md  docker-compose.yml  environment.yml  pyproject.toml  pyproject_old.toml  setup.py
gnn/: example.py  requirements.txt
graph/: architecture.ipynb
notebooks/: Methylation Pulling.ipynb  methylation_exploration.ipynb  train_ff_net_methyl.ipynb
projectx-2021/data/: dataset.py
projectx/data/: datamodule.py
projectx/graph/: graph.py  inference.py
projectx/model/: model.py
projectx/training/: pl_training.py
protbert/: inference.ipynb
r/: fetch_data.R
scripts/: methylation_pull.py  pretty_json.py  protein_features.py  string_db_pull.py
testing/: architecture.ipynb  architecture.py
