[tool.poetry]
name = "projectx-2021"
version = "0.1.0"
description = ""
authors = [
  "Xin Han (Adam) Tu <adamxhy123@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
